--- a/responsive/css/styles.css
+++ b/responsive/css/styles.css
@@ -143,7 +143,7 @@ main {
 
  aside ul {
    list-style-type: none;
-   display: inline-block auto;
+   display: inline-block;
    padding: 20px
  }
 
